src/test/deca/context/invalid/Objet/sameName_field_Method1.deca
// Description:
//    test de faire déclarer une méthode déjà utilisé comme champ
//
// Resultats:
//  12:4:  The identifier entier is already used for  a  method or a field in the same class
//
// Historique:
//    cree le 20/01/2022

class A   {
    int entier;     
    void entier(){}
    
}

{}



